# emc230x

./: .gitignore  CHANGELOG  Cargo.toml
.github/workflows/: rust.yml
examples/rp2040/: Cargo.toml  memory.x
examples/rp2040/.cargo/: config.toml
examples/rp2040/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: error.rs  lib.rs  registers.rs  types.rs
src/registers/: configuration.rs  drive_fail_band.rs  fan_configuration1.rs  fan_configuration2.rs  fan_drive_fail_status.rs  fan_drive_setting.rs  fan_interrupt_enable.rs  fan_min_drive.rs  fan_spin_status.rs  fan_spin_up_config.rs  fan_stall_status.rs  fan_status.rs  max_step_size.rs  mod.rs  pid_gain.rs  product_features.rs  product_id.rs  pwm_base.rs  pwm_divide.rs  pwm_output_config.rs  pwm_polarity_config.rs  software_lock.rs  tach_reading.rs  tach_target.rs  valid_tach_count.rs
